@@ -55,7 +55,7 @@
 #include "apr_buckets.h"
 
 APU_DECLARE_NONSTD(apr_status_t) apr_bucket_shared_split(apr_bucket *a,
-                                                         apr_off_t point)
+                                                         apr_size_t point)
 {
     apr_bucket_refcount *r = a->data;
     apr_status_t rv;
@@ -91,7 +91,7 @@ APU_DECLARE(int) apr_bucket_shared_destroy(void *data)
 
 APU_DECLARE(apr_bucket *) apr_bucket_shared_make(apr_bucket *b, void *data,
                                                  apr_off_t start,
-                                                 apr_off_t length)
+                                                 apr_size_t length)
 {
     apr_bucket_refcount *r = data;
 
